Fix "more about requestors" overlap
    clear: both is important to avoid the situation described in
    3ae50719e537328d8f4242e30eea92f0923580c8, namely that the ticket
    table is very narrow when a float is used, because the entire float's
    width is treated as a margin on the accordion content.

--- a/share/static/css/base-responsive/accordion.css
+++ b/share/static/css/base-responsive/accordion.css
@@ -37,15 +37,15 @@
 
 
 
-.user-accordion h3 {
-    position: relative;
-}
 .user-accordion a.user-summary {
-    position: absolute;
-    right: 0;
+    float: right;
     text-decoration: none;
 }
 .user-accordion a.user-summary:hover { text-decoration: underline }
+
+.user-accordion .ui-accordion-content {
+    clear: both;
+}
 
 .user-accordion a.modify-user {
     font-size: 80%;
